Changes to the Mesh3D and other classes.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ SET(PROJECT_SOURCE_PATH ${PROJECT_ROOT_PATH}/src)
 file(GLOB src_files
 	${PROJECT_SOURCE_PATH}/common/cuda_math.cu
 	${PROJECT_SOURCE_PATH}/Mesh3d.cu
+	${PROJECT_SOURCE_PATH}/NumericalIntegrator3d.cu
 	)
 file(GLOB header_files
 	${PROJECT_SOURCE_PATH}/common/constants.h
@@ -20,6 +21,8 @@ file(GLOB header_files
 	${PROJECT_SOURCE_PATH}/common/cuda_math.cuh
 	${PROJECT_SOURCE_PATH}/common/cuda_memory.cuh
 	${PROJECT_SOURCE_PATH}/Mesh3d.cuh
+	${PROJECT_SOURCE_PATH}/NumericalIntegrator3d.cuh
+	${PROJECT_SOURCE_PATH}/evaluators/evaluator3d.cuh
 	)
 
 
