--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,7 @@ file(GLOB header_files
 	${PROJECT_SOURCE_PATH}/common/cuda_math.cuh
 	${PROJECT_SOURCE_PATH}/common/cuda_memory.cuh
 	${PROJECT_SOURCE_PATH}/common/device_vector.cuh
+	${PROJECT_SOURCE_PATH}/common/gpu_timer.cuh
 	${PROJECT_SOURCE_PATH}/Mesh3d.cuh
 	${PROJECT_SOURCE_PATH}/NumericalIntegrator3d.cuh
 	${PROJECT_SOURCE_PATH}/QuadratureFormula3d.cuh
