Changed output path of test application for correct run in build and debug environment

--- a/tests/integrator3D/CMakeLists.txt
+++ b/tests/integrator3D/CMakeLists.txt
@@ -19,5 +19,6 @@ target_link_libraries(${PROJECT_NAME} PRIVATE integrator2)
 set_target_properties(${PROJECT_NAME} PROPERTIES BUILD_WITH_INSTALL_RPATH FALSE)
 set_target_properties(${PROJECT_NAME} PROPERTIES INSTALL_RPATH "${INTEGRATOR_LIB_DIR}/lib")
 set_target_properties(${PROJECT_NAME} PROPERTIES INSTALL_RPATH_USE_LINK_PATH TRUE)
+set_target_properties(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
 
 install(TARGETS ${PROJECT_NAME} DESTINATION bin)
